# thread-coap

./: .gitignore  README.md
coap-server/: coap-test-client.py  coap_server.py  coordinator.py  create_db.py  logs_manager.py  my_coap_server.py  mydatabase.db  requirements.txt  test_web.py  (+1 more)
thread-coap-client/: CMakeLists.txt  CMakePresets.json  prj.conf
thread-coap-client-heater/: CMakeLists.txt  prj.conf
thread-coap-client-heater/src/: main.c
thread-coap-client-heater/src/common/: common.h  heater.h
thread-coap-client-heater/src/communication/coap/: coap_client.c  coap_client.h  coap_common.h
thread-coap-client-heater/src/communication/thread/: nat64_utils.c  thread.c
thread-coap-client-heater/src/communication/thread/mtd/: mtd.h
thread-coap-client-heater/src/io/: environment.c  environment.h
thread-coap-client-heater/src/io/buttons/: buttons.c
thread-coap-client-heater/src/io/simulated/regulator/: regulator.c  regulator.h
thread-coap-client-heater/src/io/simulated/sensor/: sensor.c
thread-coap-client-heater/src/utils/: client_utils.c  client_utils.h
thread-coap-client/src/: buttons.c  client_utils.c  client_utils.h  coap_client.c  coap_client.h  coap_common.h  common.h  main.c  mtd.c  regulator.c  regulator.h  sensor.c  thread.h
thread-coap-client/src/common/: heater.h
thread-coap-client/src/communication/coap/: coap_common.h
thread-coap-client/src/io/simulated/sensor/: sensor.c
thread-coap-client/src/regulator/: regulator.c
thread-coap-client/src/sensor/: sensor.h
thread-coap-client/src/utils/: buttons.h  client_utils.c
(+46 files in other folders)
